fixed vertical spacing of tiles

--- a/client/src/style/base.scss
+++ b/client/src/style/base.scss
@@ -1,5 +1,4 @@
 * {
-	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 	font-size: 16px;
@@ -22,6 +21,10 @@ a {
 }
 
 .root {
+	* {
+		box-sizing: border-box;
+	}
+
 	display: flex;
 	justify-content: center;
 
