--- a/client/src/ts/components/table/ss-center.scss
+++ b/client/src/ts/components/table/ss-center.scss
@@ -8,7 +8,7 @@
 	bottom: $largeTray + $largeTray;
 	right: $smallTray + $largeTray;
 	box-shadow: inset 0 0 5px grey;
-	background: rgba(0, 0, 0, 0.05);
+	background: rgb(250, 243, 230);
 
 	.drop-zone {
 		position: absolute;
