--- a/client/src/ts/components/table/ss-wall.scss
+++ b/client/src/ts/components/table/ss-wall.scss
@@ -6,7 +6,7 @@
 	bottom: 0;
 	height: $largeTray + $largeTray;
 	width: $smallTray + $largeTray;
-	background: lighten(black, 90%);
+	// background: slategrey; //lighten(black, 90%);
 
 	&.wall-begin {
 		.tile-count {
